--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,12 @@
-#################################### HOSTS ####################################
+#----------------------------------- HOSTS -----------------------------------#
 
+[canaima_mesos_master]
+mesos_master ansible_host=192.168.56.20 slave_1_ip=192.168.56.21 slave2_ip=0.0.0.0
 
-###############################################################################
+[canaima_mesos_slave]
+mesos_slave_1 ansible_host=192.168.56.21 master_ip=192.168.56.20 slave2_ip=0.0.0.0
+
+# --------------------------------------------------------------------------- #
 
 
 
