--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,2 +1,3 @@
-- src: git+ssh://git@github.com:canaima-project/ansible-role-mesos.git
+- src: git+git@github.com:canaima-project/ansible-role-mesos.git
   name: mesos
+  version: dev
