--- a/inventory.ini
+++ b/inventory.ini
@@ -1,37 +1,16 @@
 #----------------------------------- HOSTS -----------------------------------#
 
-[canaima_mesos_master]
-mesos_master ansible_host=192.168.56.20 slave_1_ip=192.168.56.21 slave2_ip=0.0.0.0
+[canaima_mesos_masters]
+mesos_master_1 ansible_host=192.168.56.20
+mesos_master_2 ansible_host=192.168.56.30
 
-[canaima_mesos_slave]
-mesos_slave_1 ansible_host=192.168.56.21 master_ip=192.168.56.20 slave2_ip=0.0.0.0
+[canaima_mesos_slaves]
+mesos_slave_1 ansible_host=192.168.56.21 master_ip=192.168.56.20
+mesos_slave_2 ansible_host=192.168.56.22 master_ip=192.168.56.20
 
 # --------------------------------------------------------------------------- #
 
 
 
-################################## VARIABLES ##################################
+#--------------------------------- VARIABLES ---------------------------------#
 [all:vars]
-# ------------- Variables that NEED to be overloaded somewhere -------------- #
-
-# --------------------------------------------------------------------------- #
-
-# ------------------------- IP addresses variables -------------------------- #
-
-# --------------------------------------------------------------------------- #
-
-# ----------------------------- URL variables ------------------------------- #
-
-# --------------------------------------------------------------------------- #
-
-# ---------------------------- Paths variables ------------------------------ #
-
-# --------------------------------------------------------------------------- #
-
-# ----------------------- Logins/Passwords variables ------------------------ #
-
-# --------------------------------------------------------------------------- #
-
-# ---------------------------- Other variables ------------------------------ #
-
-# --------------------------------------------------------------------------- #
