--- a/inventory.ini
+++ b/inventory.ini
@@ -2,11 +2,15 @@
 
 [canaima_mesos_masters]
 mesos_master_1 ansible_host=192.168.56.20
-mesos_master_2 ansible_host=192.168.56.30
+mesos_master_2 ansible_host=192.168.56.21
+mesos_master_2 ansible_host=192.168.56.22
 
 [canaima_mesos_slaves]
-mesos_slave_1 ansible_host=192.168.56.21 master_ip=192.168.56.20
-mesos_slave_2 ansible_host=192.168.56.22 master_ip=192.168.56.20
+mesos_slave_1 ansible_host=192.168.56.30
+mesos_slave_2 ansible_host=192.168.56.32 
+mesos_slave_3 ansible_host=192.168.56.33 
+mesos_slave_4 ansible_host=192.168.56.34 
+mesos_slave_5 ansible_host=192.168.56.35 
 
 # --------------------------------------------------------------------------- #
 
