--- a/inventory.ini
+++ b/inventory.ini
@@ -1,16 +1,12 @@
 #----------------------------------- HOSTS -----------------------------------#
 
-[canaima_mesos_masters]
-mesos_master_1 ansible_host=192.168.1.2 master_id=1 master_ip=192.168.1.2 master_hostname=master-1
-; mesos_master_2 ansible_host=192.168.56.21
-; mesos_master_2 ansible_host=192.168.56.22
+[kube_master]
+k8s_master ansible_host=192.168.1.1
 
-[canaima_mesos_slaves]
-mesos_slave_1 ansible_host=192.168.1.46 slave_ip=192.168.1.46 slave_hostname=slave-1
-; mesos_slave_2 ansible_host=192.168.56.32 
-; mesos_slave_3 ansible_host=192.168.56.33 
-; mesos_slave_4 ansible_host=192.168.56.34 
-; mesos_slave_5 ansible_host=192.168.56.35 
+[kube_slaves]
+k8s_slave1 ansible_host=192.168.1.35 hostname=node-1
+k8s_slave2 ansible_host=192.168.1.97 hostname=node-2
+
 
 # --------------------------------------------------------------------------- #
 
@@ -18,4 +14,6 @@ mesos_slave_1 ansible_host=192.168.1.46 slave_ip=192.168.1.46 slave_hostname=sla
 
 #--------------------------------- VARIABLES ---------------------------------#
 [all:vars]
-zookeeper_path=/etc/zookeeper
+master_ip=192.168.1.1
+slave1_ip=192.168.1.35
+slave2_ip=192.167.1.97
