--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,12 @@
 [canaima_mesos_masters]
 mesos_master1 ansible_host=192.168.4.169 master_id=1 master_ip=192.168.4.169 master_hostname=mesos-master1
 mesos_master2 ansible_host=192.168.4.170 master_id=2 master_ip=192.168.4.170 master_hostname=mesos-master2
-mesos_master2 ansible_host=192.168.4.171 master_id=3 master_ip=192.168.4.171 master_hostname=mesos-master3
+mesos_master3 ansible_host=192.168.4.171 master_id=3 master_ip=192.168.4.171 master_hostname=mesos-master3
 
 [canaima_mesos_slaves]
 mesos_slave1 ansible_host=192.168.4.174 slave_ip=192.168.4.174 slave_hostname=mesos-slave1
 mesos_slave2 ansible_host=192.168.4.173 slave_ip=192.168.4.173 slave_hostname=mesos-slave2
 mesos_slave3 ansible_host=192.168.4.172 slave_ip=192.168.4.172 slave_hostname=mesos-slave3
 
-
+[all:vars]
 zookeeper_path=/etc/zookeeper 
