--- a/inventory.ini
+++ b/inventory.ini
@@ -8,5 +8,15 @@ mesos_slave1 ansible_host=192.168.4.174 slave_ip=192.168.4.174 slave_hostname=me
 mesos_slave2 ansible_host=192.168.4.173 slave_ip=192.168.4.173 slave_hostname=mesos-slave2
 mesos_slave3 ansible_host=192.168.4.172 slave_ip=192.168.4.172 slave_hostname=mesos-slave3
 
+[vm_creation]
+host_damian ansible_host=192.168.4.86 git_clone_ova=true
+
 [all:vars]
 zookeeper_path=/etc/zookeeper 
+ova_repo=http://192.168.4.214:8000/Documents/canaima-centos-template.ova
+path_to_ova=/Data/etudiant/
+vm_name=test
+vm_memory=1024
+vm_cpus=1
+template_ip=192.168.4.169
+vm_ip=192.168.4.169
