--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [canaima_mesos_masters]
-mesos_master1 ansible_host=192.168.4.169 master_id=1 master_ip=192.168.4.169 master_hostname=mesos-master1 leader=true
+mesos_master1 ansible_host=192.168.4.168 master_id=1 master_ip=192.168.4.168 master_hostname=mesos-master1 leader=true
 mesos_master2 ansible_host=192.168.4.170 master_id=2 master_ip=192.168.4.170 master_hostname=mesos-master2 leader=false
 mesos_master3 ansible_host=192.168.4.171 master_id=3 master_ip=192.168.4.171 master_hostname=mesos-master3 leader=false
 
@@ -8,15 +8,20 @@ mesos_slave1 ansible_host=192.168.4.174 slave_ip=192.168.4.174 slave_hostname=me
 mesos_slave2 ansible_host=192.168.4.173 slave_ip=192.168.4.173 slave_hostname=mesos-slave2
 mesos_slave3 ansible_host=192.168.4.172 slave_ip=192.168.4.172 slave_hostname=mesos-slave3
 
-[vm_creation]
-host_damian ansible_host=192.168.4.86 git_clone_ova=true
+[canaima_pc]
+canaima_pc1 ansible_host=192.168.4.7
+canaima_pc2 ansible_host=192.168.4.152 
+canaima_pc3 ansible_host=192.168.4.92 
+canaima_pc4 ansible_host=192.168.4.86 
 
 [all:vars]
 zookeeper_path=/etc/zookeeper 
-ova_repo=http://192.168.4.214:8000/Documents/canaima-centos-template.ova
-path_to_ova=/Data/etudiant/
-vm_name=test
-vm_memory=1024
-vm_cpus=1
+path_to_ova=/Data/etudiant/nfs/
+vm_name=
+vm_memory=
+vm_cpus=
 template_ip=192.168.4.169
-vm_ip=192.168.4.169
+vm_ip=
+
+[nfs]
+canaima-nfs-server ansible_host=192.168.4.177
